# pymemcache

./: .gitignore  .travis.yml  ADOPTERS.md  CHANGES.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.rst  MANIFEST.in  README.md  README.rst  docs-requirements.txt  lint-requirements.txt  mypy-requirements.txt  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.codeboarding/: Client_Wrappers_Extensions.md  Core_Memcached_Client.md  Multi_Server_Client_Hashing.md  on_boarding.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  tests.yml
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat
docs/apidoc/: modules.rst  pymemcache.client.rst  pymemcache.rst  pymemcache.test.rst
extras/tls/: ca-root.crt
pymemcache/: __init__.py  client.py  codecs.py  exceptions.py  fallback.py  pool.py  ring.py  serde.py  sharding_client.py
pymemcache/client/: __init__.py  base.py  hash.py  murmur3.py  rendezvous.py  retrying.py
pymemcache/client/ext/: aws_ec_client.py
pymemcache/ext/: aws_ec_client.py
pymemcache/test/: benchmark.py  conftest.py  integration.py  test_benchmark.py  test_client.py  test_client_hash.py  test_client_retry.py  test_codecs.py  test_compression.py  test_ext_aws_ec_client.py  test_integration.py  test_key_helper.py  test_rendezvous.py  test_retrying.py  test_serde.py  test_utils.py  test_value_helper.py  utils.py
pymemcache/test/certs/: client.crt  client.key  update.sh
