[metadata]
name = pymemcache
version = attr: pymemcache.__version__
author = Jon Parise
author_email = jon@pinterest.com
description = "A comprehensive, fast, pure Python memcached client"
long_description = file: README.rst, ChangeLog.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
url = https://github.com/pinterest/pymemcache
keywords = memcache, client, database
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License
    Topic :: Database

[options]
setup_requires =
    six
install_requires =
    six
packages = find:

[bdist_wheel]
universal = true

[coverage:run]
omit = pymemcache/test/*

[tool:pytest]
norecursedirs = build docs/_build *.egg .tox *.venv
addopts = 
    --verbose
    --tb=short
    --capture=no
    -rfEsxX
    --cov=pymemcache --cov-config=setup.cfg --cov-report=xml --cov-report=term-missing
    -m unit
markers = 
    unit
    integration
    benchmark

[flake8]
show-source = True
max-line-length = 80
exclude = .tox/*,.venv/*,docs/*
