[metadata]
name = pymemcache
version = attr: pymemcache.__version__
author = Jon Parise
author_email = jon@pinterest.com
description = A comprehensive, fast, pure Python memcached client
long_description = file: README.rst, ChangeLog.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
project_urls =
    Documentation = https://pymemcache.readthedocs.io/
    Source = https://github.com/pinterest/pymemcache
    Issue Tracker = https://github.com/pinterest/pymemcache/issues
keywords = memcache, client, database
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License
    Topic :: Database

[options]
python_requires = >= 3.8

[bdist_wheel]
universal = true

[coverage:run]
omit = pymemcache/test/*

[tool:pytest]
norecursedirs = build docs/_build *.egg .tox *.venv
addopts = 
    --verbose
    --tb=short
    --capture=no
    -rfEsxX
    --cov=pymemcache --cov-config=setup.cfg --cov-report=xml --cov-report=term-missing
    -m unit
markers = 
    unit
    integration
    benchmark
testpaths =
    pymemcache/test

[flake8]
show-source = True
exclude = .eggs/*,.tox/*,.venv/*,docs/*
extend-ignore = E203, E501
